tests/ui/traits/next-solver/specialization-transmute.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/specialization-transmute.rs:4:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete
   = note: `#[warn(incomplete_features)]` on by default

error: cannot normalize `<T as Default>::Id`

error[E0282]: type annotations needed
  --> $DIR/specialization-transmute.rs:14:23
   |
LL |     default type Id = T;
   |                       ^ cannot infer type for associated type `<T as Default>::Id`

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0282`.
